--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "vue": "^3.4.21",
+    "vue-i18n": "^9.11.0",
     "vuetify": "^3.5.14"
   },
   "devDependencies": {
