--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "./src/**/*", "./src/**/*.vue", "/src/components/**/*", "/plugins/**/*"],
+  "include": ["env.d.ts", "./src/**/*", "./src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
@@ -11,5 +11,4 @@
       "@/*": ["./src/*"]
     }
   }
-  // "files": ["plugins/vuetify.ts"]
 }
