--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/pouchdb": "^6.4.2",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^10.9.0",
+    "firebase": "^10.11.1",
+    "idb": "^8.0.0",
     "ol": "^9.1.0",
     "ol-contextmenu": "^5.4.0",
     "ol-ext": "^4.0.18",
+    "pouchdb": "^8.0.1",
+    "pouchdb-adapter-idb": "^8.0.1",
+    "pouchdb-browser": "^8.0.1",
+    "uuid": "^9.0.1",
     "vue": "^3.4.21",
     "vue-i18n": "^9.11.0",
     "vue3-openlayers": "^7.0.0",
+    "vuefire": "^3.1.23",
     "vuetify": "^3.5.14"
   },
   "devDependencies": {
@@ -29,6 +37,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.11.28",
+    "@types/uuid": "^9.0.8",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vue/eslint-config-prettier": "^8.0.0",
