--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^10.9.0",
+    "date-fns": "^3.6.0",
     "firebase": "^10.11.1",
     "idb": "^8.0.0",
     "ol": "^9.1.0",
