--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ol": "^9.1.0",
     "ol-contextmenu": "^5.4.0",
     "ol-ext": "^4.0.18",
+    "pinia": "^2.1.7",
     "pouchdb": "^8.0.1",
     "pouchdb-adapter-idb": "^8.0.1",
     "pouchdb-browser": "^8.0.1",
